--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <h1 class="hero-title">Handmade Crochet & Craft Marketplace</h1>
     <p class="hero-desc">Discover unique, artisan-made crochet and craft products. Shop or sell your creations!</p>
     <div>
-      <a href="home.html" class="btn btn-hero">Browse Products</a>
+      <a href="login.html" class="btn btn-hero">login to Browse Products</a>
     </div>
   </main>
 
